<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layRating1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl1"
            android:textSize="14dp" />

        <RatingBar
            android:id="@+id/rt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/lblStars1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:text="@string/defaultStars"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layRating2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl2"
            android:textSize="14dp" />

        <RatingBar
            android:id="@+id/rt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/lblStars2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:text="@string/defaultStars"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layRating3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl3"
            android:textSize="14dp" />

        <RatingBar
            android:id="@+id/rt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/lblStars3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:text="@string/defaultStars"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layRating4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl4"
            android:textSize="14dp" />

        <RatingBar
            android:id="@+id/rt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/lblStars4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:text="@string/defaultStars"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layRating5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl5"
            android:textSize="14dp" />

        <RatingBar
            android:id="@+id/rt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/lblStars5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:text="@string/defaultStars"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layRating6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl6"
            android:textSize="14dp" />

        <RatingBar
            android:id="@+id/rt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/lblStars6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:text="@string/defaultStars"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layRating7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl7"
            android:textSize="14dp" />

        <RatingBar
            android:id="@+id/rt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/lblStars7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0"
            android:text="@string/defaultStars"
            android:textSize="14dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/defaultStars"
        android:textAlignment="center"
        android:textSize="38dp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnReset"
        android:textSize="20dp" />
</LinearLayout>